--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Roboto&display=swap');
 @import "tailwindcss";
+
+@theme {
+  --font-baloo: "Baloo 2", sans-serif; 
+  --font-roboto: "Roboto", sans-serif;
+}
