--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=block');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Roboto&display=block');
 @import "tailwindcss";
 
 @theme {
